add grid-security role

--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,7 @@
 - src: https://github.com/egi-qc/ansible-umd
   version: master
   name: umd
+
+- src: https://github.com/egi-qc/ansible-grid-security
+  version: master
+  name: grid-security
