--- a/roles/wn/meta/main.yml
+++ b/roles/wn/meta/main.yml
@@ -2,3 +2,4 @@
 dependencies:
   - { role: 'umd', crl_deploy: true }
   - { role: 'munge', slurm_deploy: true }
+  - { role: 'slurm', slurm_deploy: true }
